--- a/source/form.html
+++ b/source/form.html
@@ -11,6 +11,17 @@
 </head>
 <div class="page__container">
 <body class="page__body">
+  <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
+    <symbol id="academy">
+      <g>
+        <path d="M14.15.25h-.1L.5 1.59v23.63l13.55 7.66 13.45-7.66V1.6L14.15.25ZM25.6 11.83l-11.54-6.5v-.1h-.1l-.1-.1v.1L2.4 11.83V3.22l11.54-1.15 11.64 1.15v8.6ZM13.95 6.76l11.54 6.4-4.51 2.5-7.13-4.02v1.33l5.92 3.35-.9.48-5.02-2.87v1.34l3.81 2.2-.8.48-3.01-1.72v1.34l1.9 1.05-1.8 1.05-11.44-6.4 11.44-6.51ZM2.41 14.7l11.44 6.5v.96l-7.93-4.5V19l8.03 4.6v1.05l-8.03-4.5v1.34l8.03 4.6 8.13-4.7v-4.97l3.41-1.91v9.56l-11.54 6.6-11.54-6.5V14.7Z"/>
+      </g>
+    </symbol>
+    <symbol id="triangle-decorate">
+      <g>
+        <path fill="#fff" d="M249.6 23.7 0 0v57h600L249.6 0v23.7ZM950.4 23.7V0L600 57h599.9V0L950.4 23.7Z"/>
+      </g>
+  </svg>
   <header class="main-header">
     <a class="main-header__main-logo" href="http://localhost:3000/index.html">
       <div class="main-header__main-logo-container">
@@ -52,6 +63,9 @@
         <source media="(min-width: 768px)" srcset="images/catalog-welcome-tablet.svg" width="457" height="77" alt="Логотип Welcome.">
       <img class="main-logo" src="images/catalog-welcome.svg" width="229px" height="39px" alt="Надпись Sedona.">
       </picture>
+      <svg class="main__triangle">
+        <use href="#triangle-decorate"></use>
+      </svg>
     </section>
     <section class="intro">
       <h1 class="intro__title">
@@ -195,10 +209,24 @@
     </ul>
     <div class="footer__copyright">
       <span class="footer__text">Разработано</span>
-      <img class="footer__icon" src="images/logos/htmlacademy.svg" width="27px" height="33px"
-      alt="htmlacademy.">
+      <a href="https://htmlacademy.ru/" aria-label="Сайт HTML Academy">
+        <svg class="footer__icon" width="27px" height="33px" alt="htmlacademy.">
+          <use href="#academy"></use>
+        </svg>
+    </a>
     </div>
   </footer>
+  <div class="modal__container modal__container--closed">
+    <div class="modal__alert">
+      <section class="modal__content">
+        <h3 class="modal__title">Что-то пошло не так!</h3>
+        <p class="modal__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
+        <a class="modal__button button" href="form.html">
+          Ок
+        </a>
+      </section>
+    </div>
+  </div>
   <script src="script.js"></script>
 </body>
 </div>
