--- a/source/index.html
+++ b/source/index.html
@@ -18,11 +18,33 @@
           <path d="M14.15.25h-.1L.5 1.59v23.63l13.55 7.66 13.45-7.66V1.6L14.15.25ZM25.6 11.83l-11.54-6.5v-.1h-.1l-.1-.1v.1L2.4 11.83V3.22l11.54-1.15 11.64 1.15v8.6ZM13.95 6.76l11.54 6.4-4.51 2.5-7.13-4.02v1.33l5.92 3.35-.9.48-5.02-2.87v1.34l3.81 2.2-.8.48-3.01-1.72v1.34l1.9 1.05-1.8 1.05-11.44-6.4 11.44-6.51ZM2.41 14.7l11.44 6.5v.96l-7.93-4.5V19l8.03 4.6v1.05l-8.03-4.5v1.34l8.03 4.6 8.13-4.7v-4.97l3.41-1.91v9.56l-11.54 6.6-11.54-6.5V14.7Z"/>
         </g>
       </symbol>
-      <symbol id="triangle-decorate">
+      <symbol id="house" viewBox="-5 11.2 80 50">
         <g>
-          <path fill="#fff" d="M249.6 23.7 0 0v57h600L249.6 0v23.7ZM950.4 23.7V0L600 57h599.9V0L950.4 23.7Z"/>
+          <path fill="#83B3D3" d="M30.12 65h16.06V41.2H30.12V65Zm2.91-20.9h10.14v18H33.03v-18Z"/><path fill="#83B3D3" d="m73.4 39.3 2.1-2.1-9.94-9.9V0H51.6v13.6L37.95 0 .5 37.2l2.1 2.1 7.84-7.8v37.6H6.42V72h64.16v-2.9h-5.12V31.5l7.93 7.8ZM62.54 69.1h-49.2V28.5l24.6-24.4 24.6 24.4v40.6Zm0-44.7-7.93-7.9V2.9h7.93v21.5Z"/><path fill="#83B3D3" d="M30.32 27.1c0 4.3 3.51 7.7 7.73 7.7a7.8 7.8 0 0 0 7.83-7.7c0-4.3-3.51-7.7-7.83-7.7a7.72 7.72 0 0 0-7.73 7.7Zm7.83-5a5 5 0 0 1 5.02 4.9c0 2.7-2.2 4.9-5.02 4.9a5 5 0 0 1-5.02-4.9c0-2.7 2.2-4.9 5.02-4.9ZM20.48 41.2h-3.01v3.9h3.01v-3.9ZM26.4 41.2h-3v3.9h3v-3.9ZM20.48 47.2h-3.01v3.9h3.01v-3.9ZM26.4 47.2h-3v3.9h3v-3.9ZM52.5 41.2h-3v3.9h3v-3.9ZM58.43 41.2h-3.01v3.9h3.01v-3.9ZM52.5 47.2h-3v3.9h3v-3.9ZM58.43 47.2h-3.01v3.9h3.01v-3.9Z"/>
         </g>
       </symbol>
+      <symbol id="burger" viewBox="-5 10 80 50">
+        <g>
+          <path fill="#83B3D3" d="M70.58 46.7H4.6C2.31 46.7.5 48.6.5 51v3.5c0 2.4 1.9 4.3 4.11 4.3h.9v1.1c0 5.5 4.31 10.1 9.63 10.1h44.7c5.32 0 9.63-4.5 9.63-10.1v-1.1h.9c2.31 0 4.12-1.9 4.12-4.3V51a4 4 0 0 0-3.91-4.3Zm-3.91 13.2c0 3.9-3.01 7-6.72 7H15.14c-3.71 0-6.72-3.2-6.72-7v-1.1h58.25v1.1Zm5.1-5.4c0 .7-.6 1.3-1.2 1.3H4.52c-.7 0-1.2-.6-1.2-1.3V51c0-.7.6-1.3 1.2-1.3h65.97c.7 0 1.2.6 1.2 1.3.1 0 .1 3.5.1 3.5ZM16.14 38.4l5.41 4.1 5.32-4.1 5.3 4.1 5.32-4.1 5.42 4.1 5.31-4.1 5.31 4.1 5.42-4.1 5.31 4.1 6.22-4.7-1.7-2.5-4.52 3.4-5.31-4.1-5.42 4.1-5.31-4.1-5.31 4.1-5.42-4.1-5.31 4.1-5.31-4.1-5.32 4.1-5.41-4.1-5.31 4.1-4.52-3.4-1.7 2.5 6.22 4.7 5.3-4.1ZM8.52 31.5h60.95c0-.6.1-1.2.1-1.9v-1.2C68.87 12.7 54.84 0 37.6 0 20.25 0 6.21 12.7 5.51 28.5v1.2c0 .6 0 1.2.1 1.8h2.91ZM37.59 3c15.64 0 28.47 11.3 29.08 25.5H8.52C9.12 14.4 21.95 3 37.59 3Z"/><path fill="#83B3D3" d="M37.6 17.3c1.05 0 1.9-.9 1.9-2s-.85-2-1.9-2c-1.06 0-1.91.9-1.91 2s.85 2 1.9 2ZM29.77 12.2c1.06 0 1.9-.9 1.9-2s-.84-2-1.9-2c-1.05 0-1.9.9-1.9 2s.85 2 1.9 2ZM45.31 12.2c1.05 0 1.9-.9 1.9-2s-.85-2-1.9-2c-1.05 0-1.9.9-1.9 2s.85 2 1.9 2Z"/>
+        </g>
+      </symbol>
+      <symbol id="souvenier" viewBox="-10 13 83 50">
+        <g>
+          <path fill="#83B3D3" d="M61.6 22.46H36.8c13.8-6.9 14.9-11.3 14.4-13.7-1.2-4.01-5.7-7.01-10-5.41-5.6 2.1-7.1 10.4-8.6 16.41-2-6.1-3.8-13.8-8.2-17.71-1.3-1.1-3.1-2.3-5.8-2-4 .4-9.8 5.4-7.5 11 2.3 5.4 9.7 8.81 14.6 11.51H3.4a2.9 2.9 0 0 0-2.9 2.9v11.31c0 1.6 1.3 2.9 2.9 2.9h.3V76h57.8V39.57h.1c1.6 0 2.9-1.3 2.9-2.9v-11.3c0-1.6-1.3-2.9-2.9-2.9ZM42.9 5.86c2.1-.3 5 1.3 5.3 3.2.4 2.8-3.4 5.3-5.1 6.4-2.5 1.7-4.9 2.6-7.3 4.1.9-3.7 2.5-13 7.1-13.7Zm-22.9 10c-2.2-1.5-6.5-4.4-6.4-7.8.1-3.61 5.7-6.61 8.8-3.91 3.9 3.4 5.7 11.1 7.1 16.61-3.2-1.5-6.3-2.8-9.5-4.9ZM26 73H6.6V39.57H26V73Zm0-36.53H3.5v-11H26v11Zm10.2 0V73H29V25.57h7.2v10.9ZM58.5 73H39.1V39.57h19.4V73Zm2.9-36.53H39.1v-11h22.3v11Z"/>
+        </g>
+        <symbol id="youtube">
+          <g>
+            <path fill="#81B3D2" d="M0 0h48v48H0z"/><path fill="#fff" d="M31.18 17H16.81c-1.5 0-2.81 1.3-2.81 2.8v8.3c0 1.6 1.3 2.9 2.81 2.9h14.37A2.8 2.8 0 0 0 34 28.2v-8.4c.1-1.5-1.2-2.8-2.8-2.8ZM21.03 27.4v-6.8l6.84 3.4-6.84 3.4Z"/>
+          </g>
+        </symbol>
+        <symbol id="telegram">
+          <g>
+            <path fill="#81B3D2" d="M0 0h48v48H0z"/><path fill="#fff" d="m34.44 16.62-3.17 14.95c-.24 1.05-.86 1.31-1.75.82l-4.83-3.56-2.33 2.24c-.25.26-.47.47-.97.47l.35-4.91 8.95-8.09c.39-.35-.09-.54-.6-.2l-11.07 6.97-4.76-1.49c-1.04-.32-1.05-1.03.22-1.53l18.62-7.18c.87-.32 1.62.2 1.34 1.51Z"/>
+        </symbol>
+        <symbol id="vkontakte">
+          <g>
+            <path fill="#81B3D2" d="M0 0h48v48H0z"/><g clip-path="url(#a)"><path fill="#fff" fill-rule="evenodd" d="M35.45 17.95c.17-.55 0-.95-.8-.95h-2.62c-.67 0-.98.35-1.14.73 0 0-1.34 3.2-3.23 5.27-.61.6-.89.8-1.22.8-.17 0-.42-.2-.42-.74v-5.11c0-.66-.18-.95-.74-.95h-4.13c-.42 0-.67.3-.67.6 0 .61.95.76 1.05 2.5v3.8c0 .84-.16.99-.5.99-.88 0-3.05-3.21-4.33-6.89-.25-.71-.5-1-1.17-1H12.9c-.75 0-.9.35-.9.73 0 .68.89 4.07 4.14 8.55 2.18 3.06 5.23 4.72 8.01 4.72 1.67 0 1.88-.37 1.88-1v-2.32c0-.73.16-.88.68-.88.4 0 1.06.2 2.62 1.67C31.11 30.22 31.4 31 32.41 31h2.62c.75 0 1.13-.37.91-1.1-.24-.72-1.09-1.77-2.21-3.02-.62-.7-1.53-1.47-1.81-1.86-.4-.49-.28-.7 0-1.14 0 0 3.2-4.43 3.53-5.93Z" clip-rule="evenodd"/></g><defs><clipPath id="a"><path fill="#fff" d="M12 12h24v24H12z"/></clipPath></defs>
+        </symbol>
     </svg>
     <header class="main-header">
       <div class="main-header__main-logo-container">
@@ -63,13 +85,9 @@
     <main class="main-container">
       <section class="welcome-anthem">
         <picture>
-          <source media="(min-width: 768px)" srcset="images/main-welcome-tablet.svg" width="430" height="350"
-            alt="Логотип Welcome.">
-          <img class="welcome-logo" src="images/main-welcome.svg" width="282" height="214" alt="Логотип Welcome.">
+          <source media="(min-width: 768px)" srcset="images/main-welcome-tablet.png" width="430" height="350">
+          <img class="welcome-logo" src="images/main-welcome.png" width="282" height="214" alt="Логотип Welcome.">
         </picture>
-        <svg class="main__triangle-index">
-          <use href="#triangle-decorate"></use>
-        </svg>
       </section>
       <section class="intro">
         <h1 class="intro__title">Седона-небольшой городок в Аризоне,
@@ -83,26 +101,26 @@
           <li class="advantages__item advantages__item--blueback">
             <div class="advantages__description-container">
               <h3 class="advantages__title">Настоящий городок</h3>
-              <p class="advabtages__description-number">— №1 —</p>
+              <p class="advantages__description-number">— №1 —</p>
               <p class="advantages__description">Седона не аттракцион для туристов, там течет своя жизнь</p>
             </div>
             <div class="advantages__advatage-photo">
               <picture>
                 <source type="image/webp" media="(min-width: 1200px)" srcset="images/photos/index-webp-desktop.webp 1x, images/photos/index-webp-desktop@2x.webp 2x">
-                <source type="image/webp" media="(min-width: 768px)" srcset="images/photos/index-webp-tablet.webp 1x, images/photos/index-webp-tablet@2x.webp 2x">
+                <source type="image/webp" media="(min-width: 768px)" srcset="images/photos/index-webp-tablet.webp 1x, images/photos/index-webp-tablet@2x.webp 2x" width="520" height="260">
                 <source type="image/webp" srcset="images/photos/index-webp.webp 1x, images/photos/index-webp@2x.webp 2x">
-                <source media="(min-width: 1200px)" srcset="images/photos/index-view-desktop.jpg" width="800" height="260"
-                  alt="Фото города.">
-                  <source media="(min-width: 768px)" srcset="images/photos/index-view-tablet.jpg" width="512" height="260"
-                  alt="Фото города.">
-                <img class="advantages__photo" src="images/photos/index-view-1.jpg" width="520" height="260"
+                <source media="(min-width: 1200px)" srcset="images/photos/index-view-desktop.jpg">
+                  <source media="(min-width: 768px)" srcset="images/photos/index-view-tablet.jpg">
+                <img class="advantages__photo" src="images/photos/index-view-1.jpg" width="320" height="260"
                   alt="Фото города.">
               </picture>
             </div>
           </li>
           <div class="advantages__greyback-container">
             <li class="advantages__item">
-              <img class="logo" src="images\logos\house.svg" width="39" height="37" alt="Логотип дома.">
+              <svg class="advantages__logo" width="39px" height="37px" alt="Логтип дома.">
+                <use href="#house"></use>
+              </svg>
               <div class="advantages__item-container">
                 <div class="advantages__description-container">
                 <h3 class="advantages__title">Жилье</h3>
@@ -111,7 +129,9 @@
             </div>
             </li>
             <li class="advantages__item">
-              <img class="logo" src="images\logos\food.svg" width="39" height="37" alt="Логотип бургера.">
+              <svg class="advantages__logo" width="39px" height="37px" alt="Логтип дома.">
+                <use href="#burger"></use>
+              </svg>
               <div class="advantages__item-container">
                 <div class="advantages__description-container">
                 <h3 class="advantages__title">Еда</h3>
@@ -120,7 +140,9 @@
             </div>
             </li>
             <li class="advantages__item">
-              <img class="logo" src="images\logos\souveniers.svg" width="39" height="37" alt="Логотип подарка.">
+              <svg class="advantages__logo" width="39px" height="37px" alt="Логтип дома.">
+                <use href="#souvenier"></use>
+              </svg>
               <div class="advantages__item-container">
                 <div class="advantages__description-container">
                 <h3 class="advantages__title">Сувениры</h3>
@@ -132,34 +154,32 @@
           <li class="advantages__item advantages__item--blueback">
             <div class="advantages__advantage-photo">
               <picture>
-                <source media="(min-width: 1200px)" srcset="images/photos/index-view-desktop-2.jpg" width="800" height="260"
-                  alt="Фото моста.">
-                  <source media="(min-width: 768px)" srcset="images/photos/index-view-tablet-2.jpg" width="512" height="260"
-                  alt="Фото моста.">
+                <source media="(min-width: 1200px)" srcset="images/photos/index-view-desktop-2.jpg">
+                  <source media="(min-width: 768px)" srcset="images/photos/index-view-tablet-2.jpg">
                 <img class="advantages__photo" src="images/photos/index-view-2.jpg" width="520" height="260"
                   alt="Фото моста.">
               </picture>
             </div>
             <div class="advantages__description-container">
               <h3 class="advantages__title">Там есть мост дьявола</h3>
-              <p class="advabtages__description-number">— №2 —</p>
+              <p class="advantages__description-number">— №2 —</p>
               <p class="advantages__description">Да, по нему можно пройти! Если вы осмелитесь, конечно</p>
             </div>
           </li>
           <div class="advantages__greyback-container">
             <li class="advantages__item advantages__item--greyback">
               <h3 class="advantages__title">Небольшая площадь</h3>
-              <p class="advabtages__description-number">— №3 —</p>
+              <p class="advantages__description-number">— №3 —</p>
               <p class="advantages__description">Все интересные места находятся очень близко</p>
             </li>
             <li class="advantages__item advantages__item--greyback">
               <h3 class="advantages__title">Красивая дорога</h3>
-              <p class="advabtages__description-number">— №4 —</p>
+              <p class="advantages__description-number">— №4 —</p>
               <p class="advantages__description">Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
             <li class="advantages__item advantages__item--greyback">
               <h3 class="advantages__title">Мало туристов</h3>
-              <p class="advabtages__description-number">— №5 —</p>
+              <p class="advantages__description-number">— №5 —</p>
               <p class="advantages__description">Большинство едет в Гранд Каньон и толпится там</p>
           </div>
           </li>
@@ -169,7 +189,7 @@
         <h2 class="outro__title">Заинтересовались?</h2>
         <p class="outro__description">Укажите преполагаемые даты поездки,
           и мы покажем вам лучшие предложения гостиниц в Седоне</p>
-        <a class="button" href="https://clck.ru/Vmr3g"> Найти
+        <a class="button button--outro" href="https://clck.ru/Vmr3g"> Найти
           гостиницу
         </a>
       </section>
@@ -187,19 +207,25 @@
       <ul class="footer__social">
         <li class="footer__item">
           <a class="footer__link" href="https://vk.com/htmlacademy">
-            <img class="footer__icon" src="images/logos/vk.svg" width="48px" height="48px" alt="vkontakte.">
+            <svg class="footer__icon" width="48px" height="48px" alt="vkontakte.">
+              <use href="#vkontakte"></use>
+            </svg>
             <span class="visually-hidden">vkontakte.</span>
           </a>
         </li>
         <li class="footer__item">
           <a class="footer__link" href="https://t.me/htmlacademy">
-            <img class="footer__icon" src="images/logos/telegram.svg" width="48px" height="48px" alt="telegram.">
+            <svg class="footer__icon" width="48px" height="48px" alt="telegram.">
+              <use href="#telegram"></use>
+            </svg>
             <span class="visually-hidden">telegram.</span>
           </a>
         </li>
         <li class="footer__item">
           <a class="footer__link" href="https://www.youtube.com/user/htmlacademyru">
-            <img class="footer__icon" src="images/logos/youtube.svg" width="48px" height="48px" alt="youtube.">
+            <svg class="footer__icon" width="48px" height="48px" alt="youtube.">
+              <use href="#youtube"></use>
+            </svg>
             <span class="visually-hidden">youtube.</span>
           </a>
         </li>
