--- a/source/form.html
+++ b/source/form.html
@@ -195,10 +195,12 @@
               <use href="#youtube"></use>
             </svg> <span class="visually-hidden">youtube.</span></a></li>
       </ul>
-      <div class="footer__copyright"><span class="footer__text">Разработано</span> <a href="https://htmlacademy.ru/"
-          aria-label="Сайт HTML Academy"><svg class="footer__icon" width="27px" height="33px" alt="htmlacademy.">
-            <use href="#academy"></use>
-          </svg></a></div>
+      <a class="footer__copyright" href="https://htmlacademy.ru/" aria-label="Сайт HTML Academy">
+        <span class="footer__text">Разработано</span>
+        <svg class="footer__icon" width="27px" height="33px" alt="htmlacademy.">
+              <use href="#academy"></use>
+            </svg>
+          </a>
     </footer>
     <div class="modal modal--closed">
       <div class="modal__container">
