--- a/source/index.html
+++ b/source/index.html
@@ -222,7 +222,7 @@
       </section>
       <section class="map"><iframe
           src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1967219.8363975238!2d-112.44940083756063!3d35.92459829266354!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x872da132f942b00d%3A0x5548c523fa6c8efd!2z0KHQtdC00L7QvdCwLCDQkNGA0LjQt9C-0L3QsCA4NjMzNiwg0KHQqNCQ!5e0!3m2!1sru!2sru!4v1672092969156!5m2!1sru!2sru"
-          width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+          width="100%" height="350" style="border:0;" allowfullscreen="" loading="lazy"
           referrerpolicy="no-referrer-when-downgrade">alt="Седона на карте"</iframe></section>
     </main>
     <footer class="footer">
@@ -241,10 +241,12 @@
               <use href="#youtube"></use>
             </svg> <span class="visually-hidden">youtube.</span></a></li>
       </ul>
-      <div class="footer__copyright"><span class="footer__text">Разработано</span> <a href="https://htmlacademy.ru/"
-          aria-label="Сайт HTML Academy"><svg class="footer__icon" width="27px" height="33px" alt="htmlacademy.">
+      <a class="footer__copyright" href="https://htmlacademy.ru/" aria-label="Сайт HTML Academy">
+      <span class="footer__text">Разработано</span>
+      <svg class="footer__icon" width="27px" height="33px" alt="htmlacademy.">
             <use href="#academy"></use>
-          </svg></a></div>
+          </svg>
+        </a>
     </footer>
     <script src="js/script.js"></script>
   </body>
