--- a/source/catalog.html
+++ b/source/catalog.html
@@ -136,7 +136,7 @@
                   alt="likes.">
                   <use href="#like"></use>
                 </svg> <span class="like-button__counter">1350</span></div>
-            </div>
+              </div>
           </li>
           <li class="catalog-photos__item">
             <div class="catalog-photos__photos-photo">
@@ -245,10 +245,12 @@
               <use href="#youtube"></use>
             </svg> <span class="visually-hidden">youtube.</span></a></li>
       </ul>
-      <div class="footer__copyright"><span class="footer__text">Разработано</span> <a href="https://htmlacademy.ru/"
-          aria-label="Сайт HTML Academy"><svg class="footer__icon" width="27px" height="33px" alt="htmlacademy.">
-            <use href="#academy"></use>
-          </svg></a></div>
+      <a class="footer__copyright" href="https://htmlacademy.ru/" aria-label="Сайт HTML Academy">
+        <span class="footer__text">Разработано</span>
+        <svg class="footer__icon" width="27px" height="33px" alt="htmlacademy.">
+              <use href="#academy"></use>
+            </svg>
+          </a>
     </footer>
     <script src="js/script.js"></script>
   </body>
